--- a/components/_type.scss
+++ b/components/_type.scss
@@ -1,7 +1,7 @@
 
 h1 {
-  font-weight: $heading-font-weight;
-  font-family: $heading-font-family;
-  line-height: $heading-line-height;
-  color: $heading-font-color;
+  // font-weight: $heading-font-weight;
+  // font-family: $heading-font-family;
+  // line-height: $heading-line-height;
+  // color: $heading-font-color;
 }
