--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -1,4 +1,4 @@
-$grid: 10,20,30,40,50,60,70,80,90,100,25,16.6667,33.3333,66.6667,75;
+$grid: 0, 10,20,30,40,50,60,70,80,90,100,25,16.6667,33.3333,66.6667,75;
 $buttons: ('a.button, .button, button');
 $transition: 0;
 
