--- a/css/main.css
+++ b/css/main.css
@@ -65,379 +65,284 @@ button {
 :focus {
   outline: 0; }
 
-.row {
+.r::before, .r::after {
+  display: block;
+  content: ' ';
+  clear: both; }
+
+.r > * {
+  float: left; }
+
+.flex-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap; }
 
-.column {
-  flex-basis: 100%; }
-
-.tablet-10,
-.desktop-10 {
-  width: 100%; }
-
-.flex-10 {
+.flex-column {
   flex: 1; }
 
-.width-10 {
-  width: 10%;
-  float: left; }
+.flex-small,
+.flex-large {
+  flex-basis: 100%; }
 
-.push-10 {
-  margin-left: 10%; }
-
-.tablet-20,
-.desktop-20 {
+.cs0,
+.cl0 {
   width: 100%; }
 
-.flex-20 {
-  flex: 2; }
-
-.width-20 {
-  width: 20%;
-  float: left; }
-
-.push-20 {
-  margin-left: 20%; }
-
-.tablet-30,
-.desktop-30 {
+.cs10,
+.cl10 {
   width: 100%; }
 
-.flex-30 {
-  flex: 3; }
-
-.width-30 {
-  width: 30%;
-  float: left; }
-
-.push-30 {
-  margin-left: 30%; }
-
-.tablet-40,
-.desktop-40 {
+.cs20,
+.cl20 {
   width: 100%; }
 
-.flex-40 {
-  flex: 4; }
-
-.width-40 {
-  width: 40%;
-  float: left; }
-
-.push-40 {
-  margin-left: 40%; }
-
-.tablet-50,
-.desktop-50 {
+.cs30,
+.cl30 {
   width: 100%; }
 
-.flex-50 {
-  flex: 5; }
-
-.width-50 {
-  width: 50%;
-  float: left; }
-
-.push-50 {
-  margin-left: 50%; }
-
-.tablet-60,
-.desktop-60 {
+.cs40,
+.cl40 {
   width: 100%; }
 
-.flex-60 {
-  flex: 6; }
-
-.width-60 {
-  width: 60%;
-  float: left; }
-
-.push-60 {
-  margin-left: 60%; }
-
-.tablet-70,
-.desktop-70 {
+.cs50,
+.cl50 {
   width: 100%; }
 
-.flex-70 {
-  flex: 7; }
-
-.width-70 {
-  width: 70%;
-  float: left; }
-
-.push-70 {
-  margin-left: 70%; }
-
-.tablet-80,
-.desktop-80 {
+.cs60,
+.cl60 {
   width: 100%; }
 
-.flex-80 {
-  flex: 8; }
-
-.width-80 {
-  width: 80%;
-  float: left; }
-
-.push-80 {
-  margin-left: 80%; }
-
-.tablet-90,
-.desktop-90 {
+.cs70,
+.cl70 {
   width: 100%; }
 
-.flex-90 {
-  flex: 9; }
-
-.width-90 {
-  width: 90%;
-  float: left; }
-
-.push-90 {
-  margin-left: 90%; }
-
-.tablet-100,
-.desktop-100 {
+.cs80,
+.cl80 {
   width: 100%; }
 
-.flex-100 {
-  flex: 10; }
-
-.width-100 {
-  width: 100%;
-  float: left; }
-
-.push-100 {
-  margin-left: 100%; }
-
-.tablet-25,
-.desktop-25 {
+.cs90,
+.cl90 {
   width: 100%; }
 
-.flex-25 {
-  flex: 2.5; }
-
-.width-25 {
-  width: 25%;
-  float: left; }
-
-.push-25 {
-  margin-left: 25%; }
-
-.tablet-16,
-.desktop-16 {
+.cs100,
+.cl100 {
   width: 100%; }
 
-.flex-16 {
-  flex: 1.6; }
-
-.width-16 {
-  width: 16.6667%;
-  float: left; }
-
-.push-16 {
-  margin-left: 16.6667%; }
-
-.tablet-33,
-.desktop-33 {
+.cs25,
+.cl25 {
   width: 100%; }
 
-.flex-33 {
-  flex: 3.3; }
-
-.width-33 {
-  width: 33.3333%;
-  float: left; }
-
-.push-33 {
-  margin-left: 33.3333%; }
-
-.tablet-66,
-.desktop-66 {
+.cs16,
+.cl16 {
   width: 100%; }
 
-.flex-66 {
-  flex: 6.6; }
-
-.width-66 {
-  width: 66.6667%;
-  float: left; }
-
-.push-66 {
-  margin-left: 66.6667%; }
-
-.tablet-75,
-.desktop-75 {
+.cs33,
+.cl33 {
   width: 100%; }
 
-.flex-75 {
-  flex: 7.5; }
+.cs66,
+.cl66 {
+  width: 100%; }
 
-.width-75 {
-  width: 75%;
-  float: left; }
+.cs75,
+.cl75 {
+  width: 100%; }
 
-.push-75 {
-  margin-left: 75%; }
+.c0 {
+  width: 0%; }
+
+.c10 {
+  width: 10%; }
+
+.c20 {
+  width: 20%; }
+
+.c30 {
+  width: 30%; }
+
+.c40 {
+  width: 40%; }
+
+.c50 {
+  width: 50%; }
+
+.c60 {
+  width: 60%; }
+
+.c70 {
+  width: 70%; }
+
+.c80 {
+  width: 80%; }
+
+.c90 {
+  width: 90%; }
+
+.c100 {
+  width: 100%; }
+
+.c25 {
+  width: 25%; }
+
+.c16 {
+  width: 16.6667%; }
+
+.c33 {
+  width: 33.3333%; }
+
+.c66 {
+  width: 66.6667%; }
+
+.c75 {
+  width: 75%; }
 
 @media (min-width: 600px) {
-  .tablet-10 {
-    width: 10%;
-    float: left; }
-  .push-tablet-10 {
+  .cs0 {
+    width: 0%; }
+  .pcs0 {
+    margin-left: 0%; }
+  .cs10 {
+    width: 10%; }
+  .pcs10 {
     margin-left: 10%; }
-  .tablet-20 {
-    width: 20%;
-    float: left; }
-  .push-tablet-20 {
+  .cs20 {
+    width: 20%; }
+  .pcs20 {
     margin-left: 20%; }
-  .tablet-30 {
-    width: 30%;
-    float: left; }
-  .push-tablet-30 {
+  .cs30 {
+    width: 30%; }
+  .pcs30 {
     margin-left: 30%; }
-  .tablet-40 {
-    width: 40%;
-    float: left; }
-  .push-tablet-40 {
+  .cs40 {
+    width: 40%; }
+  .pcs40 {
     margin-left: 40%; }
-  .tablet-50 {
-    width: 50%;
-    float: left; }
-  .push-tablet-50 {
+  .cs50 {
+    width: 50%; }
+  .pcs50 {
     margin-left: 50%; }
-  .tablet-60 {
-    width: 60%;
-    float: left; }
-  .push-tablet-60 {
+  .cs60 {
+    width: 60%; }
+  .pcs60 {
     margin-left: 60%; }
-  .tablet-70 {
-    width: 70%;
-    float: left; }
-  .push-tablet-70 {
+  .cs70 {
+    width: 70%; }
+  .pcs70 {
     margin-left: 70%; }
-  .tablet-80 {
-    width: 80%;
-    float: left; }
-  .push-tablet-80 {
+  .cs80 {
+    width: 80%; }
+  .pcs80 {
     margin-left: 80%; }
-  .tablet-90 {
-    width: 90%;
-    float: left; }
-  .push-tablet-90 {
+  .cs90 {
+    width: 90%; }
+  .pcs90 {
     margin-left: 90%; }
-  .tablet-100 {
-    width: 100%;
-    float: left; }
-  .push-tablet-100 {
+  .cs100 {
+    width: 100%; }
+  .pcs100 {
     margin-left: 100%; }
-  .tablet-25 {
-    width: 25%;
-    float: left; }
-  .push-tablet-25 {
+  .cs25 {
+    width: 25%; }
+  .pcs25 {
     margin-left: 25%; }
-  .tablet-16 {
-    width: 16.6667%;
-    float: left; }
-  .push-tablet-16 {
+  .cs16 {
+    width: 16.6667%; }
+  .pcs16 {
     margin-left: 16.6667%; }
-  .tablet-33 {
-    width: 33.3333%;
-    float: left; }
-  .push-tablet-33 {
+  .cs33 {
+    width: 33.3333%; }
+  .pcs33 {
     margin-left: 33.3333%; }
-  .tablet-66 {
-    width: 66.6667%;
-    float: left; }
-  .push-tablet-66 {
+  .cs66 {
+    width: 66.6667%; }
+  .pcs66 {
     margin-left: 66.6667%; }
-  .tablet-75 {
-    width: 75%;
-    float: left; }
-  .push-tablet-75 {
+  .cs75 {
+    width: 75%; }
+  .pcs75 {
     margin-left: 75%; }
-  .column {
+  .flex-small {
     flex: 1; } }
 
 @media (min-width: 900px) {
-  .desktop-10 {
-    width: 10%;
-    float: left; }
-  .push-desktop-10 {
+  .cl0 {
+    width: 0%; }
+  .pcl0 {
+    margin-left: 0%; }
+  .cl10 {
+    width: 10%; }
+  .pcl10 {
     margin-left: 10%; }
-  .desktop-20 {
-    width: 20%;
-    float: left; }
-  .push-desktop-20 {
+  .cl20 {
+    width: 20%; }
+  .pcl20 {
     margin-left: 20%; }
-  .desktop-30 {
-    width: 30%;
-    float: left; }
-  .push-desktop-30 {
+  .cl30 {
+    width: 30%; }
+  .pcl30 {
     margin-left: 30%; }
-  .desktop-40 {
-    width: 40%;
-    float: left; }
-  .push-desktop-40 {
+  .cl40 {
+    width: 40%; }
+  .pcl40 {
     margin-left: 40%; }
-  .desktop-50 {
-    width: 50%;
-    float: left; }
-  .push-desktop-50 {
+  .cl50 {
+    width: 50%; }
+  .pcl50 {
     margin-left: 50%; }
-  .desktop-60 {
-    width: 60%;
-    float: left; }
-  .push-desktop-60 {
+  .cl60 {
+    width: 60%; }
+  .pcl60 {
     margin-left: 60%; }
-  .desktop-70 {
-    width: 70%;
-    float: left; }
-  .push-desktop-70 {
+  .cl70 {
+    width: 70%; }
+  .pcl70 {
     margin-left: 70%; }
-  .desktop-80 {
-    width: 80%;
-    float: left; }
-  .push-desktop-80 {
+  .cl80 {
+    width: 80%; }
+  .pcl80 {
     margin-left: 80%; }
-  .desktop-90 {
-    width: 90%;
-    float: left; }
-  .push-desktop-90 {
+  .cl90 {
+    width: 90%; }
+  .pcl90 {
     margin-left: 90%; }
-  .desktop-100 {
-    width: 100%;
-    float: left; }
-  .push-desktop-100 {
+  .cl100 {
+    width: 100%; }
+  .pcl100 {
     margin-left: 100%; }
-  .desktop-25 {
-    width: 25%;
-    float: left; }
-  .push-desktop-25 {
+  .cl25 {
+    width: 25%; }
+  .pcl25 {
     margin-left: 25%; }
-  .desktop-16 {
-    width: 16.6667%;
-    float: left; }
-  .push-desktop-16 {
+  .cl16 {
+    width: 16.6667%; }
+  .pcl16 {
     margin-left: 16.6667%; }
-  .desktop-33 {
-    width: 33.3333%;
-    float: left; }
-  .push-desktop-33 {
+  .cl33 {
+    width: 33.3333%; }
+  .pcl33 {
     margin-left: 33.3333%; }
-  .desktop-66 {
-    width: 66.6667%;
-    float: left; }
-  .push-desktop-66 {
+  .cl66 {
+    width: 66.6667%; }
+  .pcl66 {
     margin-left: 66.6667%; }
-  .desktop-75 {
-    width: 75%;
-    float: left; }
-  .push-desktop-75 {
-    margin-left: 75%; } }
+  .cl75 {
+    width: 75%; }
+  .pcl75 {
+    margin-left: 75%; }
+  .flex-large {
+    flex: 1; } }
+
+html {
+  font-size: 120%; }
+
+@media (min-width: 600px) {
+  html {
+    font-size: 110%; } }
+
+@media (min-width: 900px) {
+  html {
+    font-size: 100%; } }
 
 a.button, .button, button {
   background: #00549F;
@@ -450,82 +355,152 @@ a.button:hover, .button:hover, button:hover, a.button:focus, a.button:active, .b
   color: white;
   font-size: 1rem; }
 
-.background {
+.b {
   background: #ffffff; }
 
-.background-primary {
+.b-p {
   background: #00549F; }
 
-.background-secundary {
+.b-s {
   background: #68953B; }
 
-.background-darker {
+.b-d {
   background: #e6e6e6; }
 
-.text-primary {
-  color: #00549F; }
-
-.text-secondary {
-  color: #68953B; }
-
-.text-default {
+.t {
   color: #404040; }
 
-.text-darker {
+.t-p {
+  color: #00549F; }
+
+.t-s {
+  color: #68953B; }
+
+.t-d {
   color: #272727; }
 
-.text-white {
+.t-white {
   color: white; }
 
-.margin {
+.m {
   margin: 1.5rem; }
 
-.margin-double {
+.m-0 {
+  margin: 0; }
+
+.m-d {
   margin: 3rem; }
 
-.margin-half {
+.m-h {
   margin: 0.75rem; }
 
-.margin-quarter {
+.m-q {
   margin: 0.375rem; }
 
-.padding {
+.m-v {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem; }
+
+.m-v-d {
+  margin-top: 3rem;
+  margin-bottom: 3rem; }
+
+.m-v-h {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem; }
+
+.m-v-q {
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem; }
+
+.m-h {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem; }
+
+.m-h-d {
+  margin-left: 3rem;
+  margin-right: 3rem; }
+
+.m-h-h {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem; }
+
+.m-h-q {
+  margin-left: 0.375rem;
+  margin-right: 0.375rem; }
+
+.p {
   padding: 1.5rem; }
 
-.padding-double {
+.p-0 {
+  padding: 0; }
+
+.p-d {
   padding: 3rem; }
 
-.padding-half {
+.p-h {
   padding: 0.75rem; }
 
-.padding-quarter {
+.p-q {
   padding: 0.375rem; }
 
-.text-center {
+.p-v {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem; }
+
+.p-v-d {
+  padding-top: 3rem;
+  padding-bottom: 3rem; }
+
+.p-v-h {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem; }
+
+.p-v-q {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem; }
+
+.p-h {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
+
+.p-h-d {
+  padding-left: 3rem;
+  padding-right: 3rem; }
+
+.p-h-h {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem; }
+
+.p-h-q {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem; }
+
+.t-c {
   text-align: center; }
 
-.text-left {
+.t-l {
   text-align: left; }
 
-.text-right {
+.t-r {
   text-align: right; }
 
-.vertical-center {
+.v-c {
   display: flex;
   align-items: center;
   justify-content: center; }
 
-.vertical-botton {
+.v-b {
   display: flex;
   align-items: flex-end;
   justify-content: center; }
 
-.vertical-top {
+.v-t {
   display: flex;
   align-items: flex-start;
   justify-content: center; }
 
-.vertical-stretch {
+.v-s {
   display: flex;
   align-items: stretch;
   justify-content: center; }
