--- a/css/main.css
+++ b/css/main.css
@@ -1,530 +1,1 @@
-/*! by Abel Elizalde */
-html {
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  margin: 0;
-  box-sizing: border-box; }
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit; }
-
-body {
-  margin: 0;
-  color: #404040;
-  background: #ffffff;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased; }
-
-h1,
-h2,
-h3,
-h4,
-p,
-blockquote,
-figure,
-ol,
-ul {
-  margin: 0;
-  padding: 0; }
-
-main,
-li {
-  display: block; }
-
-h1,
-h2,
-h3,
-h4 {
-  font-size: inherit; }
-
-strong {
-  font-weight: bold; }
-
-a {
-  transition: 0;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
-
-button {
-  overflow: visible;
-  border: 0;
-  font: inherit;
-  -webkit-font-smoothing: inherit;
-  letter-spacing: inherit;
-  background: none;
-  cursor: pointer; }
-
-::-moz-focus-inner {
-  padding: 0;
-  border: 0; }
-
-:focus {
-  outline: 0; }
-
-.r::before, .r::after {
-  display: block;
-  content: ' ';
-  clear: both; }
-
-.r > * {
-  float: left; }
-
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; }
-
-.flex-column {
-  flex: 1; }
-
-.flex-small,
-.flex-large {
-  flex-basis: 100%; }
-
-.cs0,
-.cl0 {
-  width: 100%; }
-
-.cs10,
-.cl10 {
-  width: 100%; }
-
-.cs20,
-.cl20 {
-  width: 100%; }
-
-.cs30,
-.cl30 {
-  width: 100%; }
-
-.cs40,
-.cl40 {
-  width: 100%; }
-
-.cs50,
-.cl50 {
-  width: 100%; }
-
-.cs60,
-.cl60 {
-  width: 100%; }
-
-.cs70,
-.cl70 {
-  width: 100%; }
-
-.cs80,
-.cl80 {
-  width: 100%; }
-
-.cs90,
-.cl90 {
-  width: 100%; }
-
-.cs100,
-.cl100 {
-  width: 100%; }
-
-.cs25,
-.cl25 {
-  width: 100%; }
-
-.cs16,
-.cl16 {
-  width: 100%; }
-
-.cs33,
-.cl33 {
-  width: 100%; }
-
-.cs66,
-.cl66 {
-  width: 100%; }
-
-.cs75,
-.cl75 {
-  width: 100%; }
-
-.c0 {
-  width: 0%; }
-
-.c10 {
-  width: 10%; }
-
-.c20 {
-  width: 20%; }
-
-.c30 {
-  width: 30%; }
-
-.c40 {
-  width: 40%; }
-
-.c50 {
-  width: 50%; }
-
-.c60 {
-  width: 60%; }
-
-.c70 {
-  width: 70%; }
-
-.c80 {
-  width: 80%; }
-
-.c90 {
-  width: 90%; }
-
-.c100 {
-  width: 100%; }
-
-.c25 {
-  width: 25%; }
-
-.c16 {
-  width: 16.6667%; }
-
-.c33 {
-  width: 33.3333%; }
-
-.c66 {
-  width: 66.6667%; }
-
-.c75 {
-  width: 75%; }
-
-@media (min-width: 600px) {
-  .cs0 {
-    width: 0%; }
-  .pcs0 {
-    margin-left: 0%; }
-  .cs10 {
-    width: 10%; }
-  .pcs10 {
-    margin-left: 10%; }
-  .cs20 {
-    width: 20%; }
-  .pcs20 {
-    margin-left: 20%; }
-  .cs30 {
-    width: 30%; }
-  .pcs30 {
-    margin-left: 30%; }
-  .cs40 {
-    width: 40%; }
-  .pcs40 {
-    margin-left: 40%; }
-  .cs50 {
-    width: 50%; }
-  .pcs50 {
-    margin-left: 50%; }
-  .cs60 {
-    width: 60%; }
-  .pcs60 {
-    margin-left: 60%; }
-  .cs70 {
-    width: 70%; }
-  .pcs70 {
-    margin-left: 70%; }
-  .cs80 {
-    width: 80%; }
-  .pcs80 {
-    margin-left: 80%; }
-  .cs90 {
-    width: 90%; }
-  .pcs90 {
-    margin-left: 90%; }
-  .cs100 {
-    width: 100%; }
-  .pcs100 {
-    margin-left: 100%; }
-  .cs25 {
-    width: 25%; }
-  .pcs25 {
-    margin-left: 25%; }
-  .cs16 {
-    width: 16.6667%; }
-  .pcs16 {
-    margin-left: 16.6667%; }
-  .cs33 {
-    width: 33.3333%; }
-  .pcs33 {
-    margin-left: 33.3333%; }
-  .cs66 {
-    width: 66.6667%; }
-  .pcs66 {
-    margin-left: 66.6667%; }
-  .cs75 {
-    width: 75%; }
-  .pcs75 {
-    margin-left: 75%; }
-  .flex-small {
-    flex: 1; } }
-
-@media (min-width: 900px) {
-  .cl0 {
-    width: 0%; }
-  .pcl0 {
-    margin-left: 0%; }
-  .cl10 {
-    width: 10%; }
-  .pcl10 {
-    margin-left: 10%; }
-  .cl20 {
-    width: 20%; }
-  .pcl20 {
-    margin-left: 20%; }
-  .cl30 {
-    width: 30%; }
-  .pcl30 {
-    margin-left: 30%; }
-  .cl40 {
-    width: 40%; }
-  .pcl40 {
-    margin-left: 40%; }
-  .cl50 {
-    width: 50%; }
-  .pcl50 {
-    margin-left: 50%; }
-  .cl60 {
-    width: 60%; }
-  .pcl60 {
-    margin-left: 60%; }
-  .cl70 {
-    width: 70%; }
-  .pcl70 {
-    margin-left: 70%; }
-  .cl80 {
-    width: 80%; }
-  .pcl80 {
-    margin-left: 80%; }
-  .cl90 {
-    width: 90%; }
-  .pcl90 {
-    margin-left: 90%; }
-  .cl100 {
-    width: 100%; }
-  .pcl100 {
-    margin-left: 100%; }
-  .cl25 {
-    width: 25%; }
-  .pcl25 {
-    margin-left: 25%; }
-  .cl16 {
-    width: 16.6667%; }
-  .pcl16 {
-    margin-left: 16.6667%; }
-  .cl33 {
-    width: 33.3333%; }
-  .pcl33 {
-    margin-left: 33.3333%; }
-  .cl66 {
-    width: 66.6667%; }
-  .pcl66 {
-    margin-left: 66.6667%; }
-  .cl75 {
-    width: 75%; }
-  .pcl75 {
-    margin-left: 75%; }
-  .flex-large {
-    flex: 1; } }
-
-html {
-  font-size: 120%; }
-
-@media (min-width: 600px) {
-  html {
-    font-size: 110%; } }
-
-@media (min-width: 900px) {
-  html {
-    font-size: 100%; } }
-
-a.button, .button, button {
-  background: #00549F;
-  color: white;
-  cursor: pointer;
-  transition: 0; }
-
-a.button:hover, .button:hover, button:hover, a.button:focus, a.button:active, .button:focus, .button:active, button:focus, button:active {
-  background: #004786;
-  color: white;
-  font-size: 1rem; }
-
-.b {
-  background: #ffffff; }
-
-.b-p {
-  background: #00549F; }
-
-.b-s {
-  background: #68953B; }
-
-.b-d {
-  background: #e6e6e6; }
-
-.t {
-  color: #404040; }
-
-.t-p {
-  color: #00549F; }
-
-.t-s {
-  color: #68953B; }
-
-.t-d {
-  color: #272727; }
-
-.t-white {
-  color: white; }
-
-.m {
-  margin: 1.5rem; }
-
-.m-0 {
-  margin: 0; }
-
-.m-d {
-  margin: 3rem; }
-
-.m-h {
-  margin: 0.75rem; }
-
-.m-q {
-  margin: 0.375rem; }
-
-.m-v {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem; }
-
-.m-v-d {
-  margin-top: 3rem;
-  margin-bottom: 3rem; }
-
-.m-v-h {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem; }
-
-.m-v-q {
-  margin-top: 0.375rem;
-  margin-bottom: 0.375rem; }
-
-.m-h {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem; }
-
-.m-h-d {
-  margin-left: 3rem;
-  margin-right: 3rem; }
-
-.m-h-h {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem; }
-
-.m-h-q {
-  margin-left: 0.375rem;
-  margin-right: 0.375rem; }
-
-.p {
-  padding: 1.5rem; }
-
-.p-0 {
-  padding: 0; }
-
-.p-d {
-  padding: 3rem; }
-
-.p-h {
-  padding: 0.75rem; }
-
-.p-q {
-  padding: 0.375rem; }
-
-.p-v {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem; }
-
-.p-v-d {
-  padding-top: 3rem;
-  padding-bottom: 3rem; }
-
-.p-v-h {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem; }
-
-.p-v-q {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem; }
-
-.p-h {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem; }
-
-.p-h-d {
-  padding-left: 3rem;
-  padding-right: 3rem; }
-
-.p-h-h {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem; }
-
-.p-h-q {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem; }
-
-.t-c {
-  text-align: center; }
-
-.t-l {
-  text-align: left; }
-
-.t-r {
-  text-align: right; }
-
-.v-c {
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-.v-b {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center; }
-
-.v-t {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center; }
-
-.v-s {
-  display: flex;
-  align-items: stretch;
-  justify-content: center; }
-
-.float-left {
-  float: left; }
-
-.float-right {
-  float: right; }
-
-.fixed {
-  position: fixed; }
-
-.link {
-  cursor: pointer; }
-
-.show {
-  display: block !important; }
-
-.hide {
-  display: none !important; }
-
-.invisible {
-  visibility: hidden; }
-
-.image-responsive {
-  max-width: 100%; }
+/*! by Abel Elizalde */.float-left,.r>*{float:left}html{font-family:Helvetica Neue,Helvetica,Arial,sans-serif;line-height:1.5rem;margin:0;box-sizing:border-box}*,::after,::before{box-sizing:inherit}body{margin:0;color:#404040;background:#fff;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased}blockquote,figure,h1,h2,h3,h4,ol,p,ul{margin:0;padding:0}li,main{display:block}h1,h2,h3,h4{font-size:inherit}strong{font-weight:700}a{transition:0;text-decoration:none}a:hover{text-decoration:underline}button{overflow:visible;border:0;font:inherit;-webkit-font-smoothing:inherit;letter-spacing:inherit}::-moz-focus-inner{padding:0;border:0}:focus{outline:0}.r::after,.r::before{display:block;content:' ';clear:both}.flex-row,.vb,.vc,.vs,.vt{display:flex}.flex-row{flex-direction:row;flex-wrap:wrap}.flex-column{flex:1}.flex-large,.flex-small{flex-basis:100%}.cl0,.cl10,.cl100,.cl16,.cl20,.cl25,.cl30,.cl33,.cl40,.cl50,.cl60,.cl66,.cl70,.cl75,.cl80,.cl90,.cs0,.cs10,.cs100,.cs16,.cs20,.cs25,.cs30,.cs33,.cs40,.cs50,.cs60,.cs66,.cs70,.cs75,.cs80,.cs90{width:100%}.c0{width:0}.c10{width:10%}.c20{width:20%}.c30{width:30%}.c40{width:40%}.c50{width:50%}.c60{width:60%}.c70{width:70%}.c80{width:80%}.c90{width:90%}.c100{width:100%}.c25{width:25%}.c16{width:16.6667%}.c33{width:33.3333%}.c66{width:66.6667%}.c75{width:75%}html{font-size:120%}@media (min-width:600px){.cs0{width:0}.pcs0{margin-left:0}.cs10{width:10%}.pcs10{margin-left:10%}.cs20{width:20%}.pcs20{margin-left:20%}.cs30{width:30%}.pcs30{margin-left:30%}.cs40{width:40%}.pcs40{margin-left:40%}.cs50{width:50%}.pcs50{margin-left:50%}.cs60{width:60%}.pcs60{margin-left:60%}.cs70{width:70%}.pcs70{margin-left:70%}.cs80{width:80%}.pcs80{margin-left:80%}.cs90{width:90%}.pcs90{margin-left:90%}.cs100{width:100%}.pcs100{margin-left:100%}.cs25{width:25%}.pcs25{margin-left:25%}.cs16{width:16.6667%}.pcs16{margin-left:16.6667%}.cs33{width:33.3333%}.pcs33{margin-left:33.3333%}.cs66{width:66.6667%}.pcs66{margin-left:66.6667%}.cs75{width:75%}.pcs75{margin-left:75%}.flex-small{flex:1}html{font-size:110%}}@media (min-width:900px){.cl0{width:0}.pcl0{margin-left:0}.cl10{width:10%}.pcl10{margin-left:10%}.cl20{width:20%}.pcl20{margin-left:20%}.cl30{width:30%}.pcl30{margin-left:30%}.cl40{width:40%}.pcl40{margin-left:40%}.cl50{width:50%}.pcl50{margin-left:50%}.cl60{width:60%}.pcl60{margin-left:60%}.cl70{width:70%}.pcl70{margin-left:70%}.cl80{width:80%}.pcl80{margin-left:80%}.cl90{width:90%}.pcl90{margin-left:90%}.cl100{width:100%}.pcl100{margin-left:100%}.cl25{width:25%}.pcl25{margin-left:25%}.cl16{width:16.6667%}.pcl16{margin-left:16.6667%}.cl33{width:33.3333%}.pcl33{margin-left:33.3333%}.cl66{width:66.6667%}.pcl66{margin-left:66.6667%}.cl75{width:75%}.pcl75{margin-left:75%}.flex-large{flex:1}html{font-size:100%}}.button,a.button,button{background:#00549F;color:#fff;cursor:pointer;transition:0}.button:active,.button:focus,.button:hover,a.button:active,a.button:focus,a.button:hover,button:active,button:focus,button:hover{background:#004786;color:#fff;font-size:1rem}.b{background:#fff}.bp{background:#00549F}.bs{background:#68953B}.bd{background:#e6e6e6}.t{color:#404040}.tp{color:#00549F}.ts{color:#68953B}.td{color:#272727}.twhite{color:#fff}.m{margin:1.5rem}.m0{margin:0}.md{margin:3rem}.mh{margin:.75rem}.mq{margin:.375rem}.mv{margin-top:1.5rem;margin-bottom:1.5rem}.mvd{margin-top:3rem;margin-bottom:3rem}.mvh{margin-top:.75rem;margin-bottom:.75rem}.mvq{margin-top:.375rem;margin-bottom:.375rem}.mh{margin-left:1.5rem;margin-right:1.5rem}.mhd{margin-left:3rem;margin-right:3rem}.mhh{margin-left:.75rem;margin-right:.75rem}.mhq{margin-left:.375rem;margin-right:.375rem}.p{padding:1.5rem}.p0{padding:0}.pd{padding:3rem}.ph{padding:.75rem}.pq{padding:.375rem}.pv{padding-top:1.5rem;padding-bottom:1.5rem}.pvd{padding-top:3rem;padding-bottom:3rem}.pvh{padding-top:.75rem;padding-bottom:.75rem}.pvq{padding-top:.375rem;padding-bottom:.375rem}.ph{padding-left:1.5rem;padding-right:1.5rem}.phd{padding-left:3rem;padding-right:3rem}.phh{padding-left:.75rem;padding-right:.75rem}.phq{padding-left:.375rem;padding-right:.375rem}.tc{text-align:center}.tl{text-align:left}.tr{text-align:right}.vc{align-items:center;justify-content:center}.vb{align-items:flex-end;justify-content:center}.vt{align-items:flex-start;justify-content:center}.vs{align-items:stretch;justify-content:center}.float-right{float:right}.fixed{position:fixed}.link{cursor:pointer}.show{display:block!important}.hide{display:none!important}.invisible{visibility:hidden}.image-responsive{max-width:100%}
