--- a/components/_type.scss
+++ b/components/_type.scss
@@ -1,22 +1,43 @@
-
 h1 {
   // font-weight: $heading-font-weight;
   // font-family: $heading-font-family;
   // line-height: $heading-line-height;
   // color: $heading-font-color;
 }
+
+.tbig {}
+
 html {
-    font-size: 120%;
+  font-size: $font-size * 1.2;
+}
+
+.tbig {
+  font-size: $font-size * 1.2;
+  &:hover {
+    font-size: $font-size * 1.25;
   }
+}
 
 @include tablet {
   html {
-    font-size: 110%;
+    font-size: $font-size * 1.1;
+  }
+  .tbig {
+    font-size: $font-size * 1.1;
+    &:hover {
+      font-size: $font-size * 1.15;
+    }
   }
 }
 
 @include desktop {
   html {
-    font-size: 100%;
+    font-size: $font-size * 1.2;
+  }
+  .tbig {
+    font-size: $font-size * 1.2;
+    &:hover {
+      font-size: $font-size * 1.25;
+    }
   }
 }
